--- a/redis.conf
+++ b/redis.conf
@@ -789,7 +789,7 @@ aclfile /etc/redis/users.acl
 # AUTH <password> as usually, or more explicitly with AUTH default <password>
 # if they follow the new protocol: both will work.
 #
-requirepass JENKINSREPACE
+#requirepass <pwd>
 
 # Command renaming (DEPRECATED).
 #
